# VC_lab_03_aa25-26

./: CMakeLists.txt  LICENSE  README.md
src/: access_image.cpp  edge_detection.cpp  filter_image.cpp  image.h  load_image.cpp  process_image.cpp  resize_image.cpp  utils.cpp
src/test/: test2.cpp
